<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="xyz.liuyd.socketclient.SettingActivity">

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/phoneNumberText"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/smsContent"
        android:text="@string/sms_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/smsContentText"
        android:minLines="3"
        android:gravity="top"
        android:maxLength="70"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/smsLimit"
        android:text="@string/sms_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/smsLimitText"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/smsSend"
        android:text="@string/sms_send"
        android:layout_marginTop="10px"
        android:layout_marginBottom="10px"
        android:textSize="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveSetting"
        android:text="@string/save_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
